pl 28

Internal
	- idealspacing slightly better for multivoice.
Doc
	- Request_register
Bugfix
	- Script.cc : float exception
	- Request::Request(Request) copying of definition pointer
	- cleaned dependencies for broken spanners
	- stupid typo in Staff_elem::post_processing()
	- init of hpos in PCol::PCol
	- Word_wrap::solve() bug 

pl 27
	- preliminary WIN32 support (JN)
Features
	- errors converted to warnings (JN)
	- context errors (JN)
	- As vs. as  notename.
	- WARNING: "melodic" stafftype will create the new Complex_staff!
Examples
	- Lohman's Viola Quartet (JN)
	- JS Bach Solo Cello suite II menuet (JN)


pl pre27

Features	
	- option --init
	- last_duration_mode: default_duration is last duration entered
	(\duration{\last})
	- syntax: grouping 2*4 3*8
	- preliminary multivoice support
Examples
	- JS Bach's WTK example added.

Internal:
	- Text_reg and Script_reg

pl 26
	- Documentation/lelie_logo.png
	- 8-bit chars for input (see ltest.tex) (MB)
	- quotes around string now optional
Bugfixes:
	- unmatched ] (MB)
Internal:
	- print/name methods of Staff_elem
	- added Request_register
	- Voice_group_registers, Voice_registers, *_register
	- Complex_staff

pl 25
	- other clefs added, keys typeset properly (MB)

pl 24:
	- Lyrics (JCN)
	- Commands in music-mode (an input feature) (there you are, Mats)

pl 23:
	- TODO file inc'd
	- cadenza mode.
	- default extension, search path.
	- error.pod,faq.pod
	- Markers
	- configure script
	- inputfile name in output.
Internal changes:
	- scrapped VPATH
	- Make dependencies per .o
	- Split Input_* parsing steps to enable marking	
Bugfixes:
	- unconnected columns


pl 22:
	- doco from mpp
	- repeat signs
	- | checks for bar in a voice (Barcheck_req)
Internal changes:
	- naming (Hungarian notation, svec vs. Array)
	- cleanup PScore, Score
	- removed Staff_commands, plugging commands into Staff_column directly
Bugfixes:
	- bug noteheadswap
	- huge memleak fixed; unearthed lots of bugs

pl 21:
	- scripts
	- texts